# service/songCover.go
@@ -14,6 +14,8 @@ type (
 		QuerySongList(req models.QuerySongListReq) ([]dbModel.Song, error)
 		//创建歌单
 		CreateSongCover(req models.CreateSongCoverReq) error
+		//查询用户歌单列表
+		QueryUserSongCoverList(req models.QueryUserSongCoverListReq) ([]dbModel.QueryUserSongCover, error)
 	}
 )
 
